--- a/index.html
+++ b/index.html
@@ -4,15 +4,34 @@
 	<meta charset="utf-8">
 	<title>Directorio</title>
 	<script src="js/jquery-3.3.1.min.js"></script>
-	<script>
+	<!-- <script>
 		$(document).ready(function(){
 		$("a").click(function(evento){
 			alert("Has presionado el enlace");
 		});
 		});
-	</script>
+	</script> -->
 </head>
 <body>
-	<a href="#">Este es un enlace nuevo</a>
+	<!-- <a href="#">Este es un enlace nuevo</a> -->
+	<!-- Dropdown Structure -->
+<ul id="dropdown1" class="dropdown-content">
+  <li><a href="#!">one</a></li>
+  <li><a href="#!">two</a></li>
+  <li class="divider"></li>
+  <li><a href="#!">three</a></li>
+</ul>
+<nav>
+  <div class="nav-wrapper">
+    <a href="#!" class="brand-logo">Logo</a>
+    <ul class="right hide-on-med-and-down">
+      <li><a href="sass.html">Sass</a></li>
+      <li><a href="badges.html">Components</a></li>
+      <!-- Dropdown Trigger -->
+      <li><a class="dropdown-trigger" href="#!" data-target="dropdown1">Dropdown<i class="material-icons right">arrow_drop_down</i></a></li>
+    </ul>
+  </div>
+</nav>
+
 </body>
 </html>
