--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
 	<meta charset="utf-8">
 	<title>Directorio</title>
 	<script src="js/jquery-3.3.1.min.js"></script>
+	<link rel="stylesheet" href="css/materialize.min.css" >
+	 <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+	
 	<!-- <script>
 		$(document).ready(function(){
 		$("a").click(function(evento){
@@ -13,25 +16,45 @@
 	</script> -->
 </head>
 <body>
-	<!-- <a href="#">Este es un enlace nuevo</a> -->
-	<!-- Dropdown Structure -->
-<ul id="dropdown1" class="dropdown-content">
-  <li><a href="#!">one</a></li>
-  <li><a href="#!">two</a></li>
-  <li class="divider"></li>
-  <li><a href="#!">three</a></li>
-</ul>
-<nav>
-  <div class="nav-wrapper">
-    <a href="#!" class="brand-logo">Logo</a>
-    <ul class="right hide-on-med-and-down">
-      <li><a href="sass.html">Sass</a></li>
-      <li><a href="badges.html">Components</a></li>
-      <!-- Dropdown Trigger -->
-      <li><a class="dropdown-trigger" href="#!" data-target="dropdown1">Dropdown<i class="material-icons right">arrow_drop_down</i></a></li>
-    </ul>
-  </div>
-</nav>
+	<nav>
+    <div class="nav-wrapper light-blue darken-3">
+      <a href="#" class="brand-logo">Directorio Institucional</a>
+      <ul id="nav-mobile" class="right hide-on-med-and-down">
+         <li><a href="#"><i class="large material-icons">account_circle</i></a></li>
+      </ul>
+    </div>
+  </nav>
+ <!--Fin nav bar-->
 
+<div class="container">
+	<div class="row">
+		<div class="col s12 m12 l9">
+			<div class="card-panel teal"></div>
+		</div>
+		
+		<div class="col s6 m6 l3 offset-m6">
+			<div class="card-panel pink"></div>
+		</div>
+		
+	</div>
+</div>
+
+  <div class="row">
+
+      <div class="col s4 m4 l3">
+        Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit...
+      </div>
+      <div class="col s4 m4 l3">
+        Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit...
+      </div>
+      <div class="col s4 m4 l3">
+        Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit...
+      </div>
+
+    </div>
+
+<!--Zona Scripts-->
+
+	<script src="js/materialize.min.js"></script>
 </body>
 </html>
