--- a/index.html
+++ b/index.html
@@ -16,14 +16,25 @@
 	</script> -->
 </head>
 <body>
-	<nav>
-    <div class="nav-wrapper light-blue darken-3">
-      <a href="#" class="brand-logo">Directorio Institucional</a>
-      <ul id="nav-mobile" class="right hide-on-med-and-down">
-         <li><a href="#"><i class="large material-icons">account_circle</i></a></li>
-      </ul>
-    </div>
-  </nav>
+	<!-- Dropdown Structure -->
+<ul id="dropdown1" class="dropdown-content">
+  <li><a href="#!">one</a></li>
+  <li><a href="#!">two</a></li>
+  <li class="divider"></li>
+  <li><a href="#!">three</a></li>
+</ul>
+<nav>
+  <div class="nav-wrapper white ">
+    <a href="#!" class="brand-logo light-blue-text text-darken-4">Logo</a>
+    <ul class="right hide-on-med-and-down">
+      <li><a href="sass.html">Sass</a></li>
+      <li><a href="badges.html">Components</a></li>
+      <!-- Dropdown Trigger -->
+      <li><a class="dropdown-trigger" href="#!" data-target="dropdown1">Dropdown<i class="material-icons right">arrow_drop_down</i></a></li>
+    </ul>
+  </div>
+</nav>
+        
  <!--Fin nav bar-->
 
 <div class="container">
@@ -56,5 +67,18 @@
 <!--Zona Scripts-->
 
 	<script src="js/materialize.min.js"></script>
+	<script type="text/javascript">
+		 document.addEventListener('DOMContentLoaded', function() {
+    var elems = document.querySelectorAll('.sidenav');
+    var instances = M.Sidenav.init(elems, options);
+  });
+
+  // Or with jQuery
+
+  $(document).ready(function(){
+    $(".dropdown-trigger").dropdown();
+  });
+		
+	</script>
 </body>
 </html>
