--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 </head>
 <body>
 	<!-- Dropdown Structure -->
-<ul id="dropdown1" class="dropdown-content">
+<ul id="dropdown1" class="dropdown-content ">
   <li><a href="#!">one</a></li>
   <li><a href="#!">two</a></li>
   <li class="divider"></li>
@@ -25,12 +25,11 @@
 </ul>
 <nav>
   <div class="nav-wrapper white ">
-    <a href="#!" class="brand-logo light-blue-text text-darken-4">Logo</a>
+    <a href="#!" class="brand-logo light-blue-text text-darken-4">Directorio Institucional</a>
     <ul class="right hide-on-med-and-down">
-      <li><a href="sass.html">Sass</a></li>
-      <li><a href="badges.html">Components</a></li>
+      <li><a class="light-blue-text" href="badges.html"><i class="material-icons">account_circle</i></a></li>
       <!-- Dropdown Trigger -->
-      <li><a class="dropdown-trigger" href="#!" data-target="dropdown1">Dropdown<i class="material-icons right">arrow_drop_down</i></a></li>
+      <li><a class="dropdown-trigger light-blue-text" href="#!" data-target="dropdown1"><i class="material-icons right">apps</i></a></li>
     </ul>
   </div>
 </nav>
@@ -39,18 +38,45 @@
 
 <div class="container">
 	<div class="row">
+		
 		<div class="col s12 m12 l9">
-			<div class="card-panel teal"></div>
+			<div class="card-panel ">
+					<table class="highlight responsive-table">
+			        <thead>
+			          <tr>
+			              <th>Name</th>
+			              <th>Item Name</th>
+			              <th>Item Price</th>
+			          </tr>
+			        </thead>
+
+			        <tbody>
+			          <tr>
+			            <td>Alvin</td>
+			            <td>Eclair</td>
+			            <td>$0.87</td>
+			          </tr>
+			          <tr>
+			            <td>Alan</td>
+			            <td>Jellybean</td>
+			            <td>$3.76</td>
+			          </tr>
+			          <tr>
+			            <td>Jonathan</td>
+			            <td>Lollipop</td>
+			            <td>$7.00</td>
+			          </tr>
+			        </tbody>
+			      </table>
+            
+			</div>
 		</div>
 		
-		<div class="col s6 m6 l3 offset-m6">
-			<div class="card-panel pink"></div>
-		</div>
 		
 	</div>
 </div>
 
-  <div class="row">
+<!--   <div class="row">
 
       <div class="col s4 m4 l3">
         Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit...
@@ -62,7 +88,7 @@
         Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit...
       </div>
 
-    </div>
+    </div> -->
 
 <!--Zona Scripts-->
 
