--- a/login.html
+++ b/login.html
@@ -1,9 +1,83 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Inicio de sesión</title>
+	<meta charset="utf-8">
+	<title>Directorio</title>
+	<script src="js/jquery-3.3.1.min.js"></script>
+	<link rel="stylesheet" href="css/materialize.min.css" >
+	 <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+	
 </head>
+
 <body>
+	<ul id="dropdown1" class="dropdown-content ">
+  <li><a href="#!">one</a></li>
+  <li><a href="#!">two</a></li>
+  <li class="divider"></li>
+  <li><a href="#!">three</a></li>
+</ul>
+<nav>
+  <div class="nav-wrapper white ">
+    <a href="#!" class="brand-logo light-blue-text text-darken-4">Directorio Institucional</a>
+    <ul class="right hide-on-med-and-down">
+      <li><a class="light-blue-text" href="badges.html"><i class="material-icons">account_circle</i></a></li>
+      <!-- Dropdown Trigger -->
+      <li><a class="dropdown-trigger light-blue-text" href="#!" data-target="dropdown1"><i class="material-icons right">apps</i></a></li>
+    </ul>
+  </div>
+</nav>
+        
+ <!--Fin nav bar-->
+ <div class="container">
+ 	<div class="row"></div>
+ 	<div class="row ">
+
+      <div class="waves-effect col s3 center  offset-m3">
+      	<span class="flow-text">
+      		 <div class="row card-panel white">
+			    <form class="col s12 ">
+			      <div class="row">
+			        <div class="input-field col s12">
+			          <i class="material-icons prefix">account_circle</i>
+			          <input id="icon_prefix" type="text" class="validate">
+			          <label for="icon_prefix">Usuario</label>
+			        </div>
+			      </div>
+			      <div class="row">
+			        <div class="input-field col s12 ">
+			          <i class="material-icons prefix">fingerprint</i>
+			          <input id="icon_prefix" type="text" class="validate">
+			          <label for="icon_prefix">Contraseña</label>
+			        </div>
+			      </div>
+			      <div class="row">
+			        <div class="input-field col s12 ">
+			          <i class="material-icons prefix">fingerprint</i>
+			         <a class="waves-effect waves-light btn">Entrar</a>
+			        </div>
+			      </div>
+			    </form>
+			  </div>
+      	</span>
+      </div>
+    </div>
+ 	
+ </div><!--Fin container-->
+	  
 
 </body>
+<script src="js/materialize.min.js"></script>
+	<script type="text/javascript">
+		 document.addEventListener('DOMContentLoaded', function() {
+    var elems = document.querySelectorAll('.sidenav');
+    var instances = M.Sidenav.init(elems, options);
+  });
+
+  // Or with jQuery
+
+  $(document).ready(function(){
+    $(".dropdown-trigger").dropdown();
+  });
+		
+	</script>
 </html>
