Creación de sesión de usuario, sidebar

--- a/login.html
+++ b/login.html
@@ -10,31 +10,35 @@
 </head>
 
 <body>
-	<ul id="dropdown1" class="dropdown-content ">
-  <li><a href="#!">one</a></li>
-  <li><a href="#!">two</a></li>
+		<!-- Dropdown Structure -->
+<ul id="dropdown1" class="dropdown-content ">
+  <li><a href="#!" class="grey-text">one</a></li>
+  <li><a href="#!" class="grey-text">two</a></li>
   <li class="divider"></li>
-  <li><a href="#!">three</a></li>
+  <li><a href="#!" class="grey-text">three</a></li>
 </ul>
 <nav>
-  <div class="nav-wrapper white ">
-    <a href="#!" class="brand-logo light-blue-text text-darken-4">Directorio Institucional</a>
+  <div class="nav-extended white ">
+ 
+    <img src="images/logo_uaq.png">
     <ul class="right hide-on-med-and-down">
-      <li><a class="light-blue-text" href="badges.html"><i class="material-icons">account_circle</i></a></li>
+     
       <!-- Dropdown Trigger -->
-      <li><a class="dropdown-trigger light-blue-text" href="#!" data-target="dropdown1"><i class="material-icons right">apps</i></a></li>
+      <li><a class="dropdown-trigger light-blue-text text-darken-4 " href="#!" data-target="dropdown1"><i class="material-icons right ">apps</i></a></li>
     </ul>
   </div>
 </nav>
+      <br>
+      <br>  
         
  <!--Fin nav bar-->
  <div class="container">
  	<div class="row"></div>
  	<div class="row ">
 
-      <div class="waves-effect col s3 center  offset-m3">
+      <div class="waves-effect col s3 push-s1  offset-m3">
       	<span class="flow-text">
-      		 <div class="row card-panel white">
+      		 <div class="row card-panel center white">
 			    <form class="col s12 ">
 			      <div class="row">
 			        <div class="input-field col s12">
@@ -53,7 +57,7 @@
 			      <div class="row">
 			        <div class="input-field col s12 ">
 			          <i class="material-icons prefix">fingerprint</i>
-			         <a class="waves-effect waves-light btn">Entrar</a>
+			         <a href="useras.html" class="waves-effect waves-light btn">Entrar</a>
 			        </div>
 			      </div>
 			    </form>
@@ -63,9 +67,36 @@
     </div>
  	
  </div><!--Fin container-->
-	  
+ <!--Inicio footer-->
+
+ <!--fin footer-->
 
 </body>
+  <footer class="page-footer white">
+          <div class="container">
+            <div class="row">
+              <div class="col l6 s12">
+                <h5 class="white-text"></h5>
+                <p class="white-text text-lighten-4">-----------</p>
+              </div>
+              <div class="col l4 offset-l2 s12">
+                <h5 class="white-text">--------------</h5>
+                <ul>
+                  <li><a class="white-text " href="#">----------</a></li>
+                  <li><a class="white-text" href="#">---------------</a></li>
+                  <li><a class="white-text" href="#">-------------</a></li>
+                  <li><a class="white-text" href="#">             </a></li>
+                </ul>
+              </div>
+            </div>
+          </div>
+          <div class="footer-copyright">
+            <div class="container light-blue-text text-darken-4 center">
+            DITI|2019-UAQ
+            <a class="grey-text text-lighten-4 right" href="#!">More Links</a>
+            </div>
+          </div>
+        </footer>
 <script src="js/materialize.min.js"></script>
 	<script type="text/javascript">
 		 document.addEventListener('DOMContentLoaded', function() {
