--- a/login.html
+++ b/login.html
@@ -50,7 +50,7 @@
 			      <div class="row">
 			        <div class="input-field col s12 ">
 			          <i class="material-icons prefix">fingerprint</i>
-			          <input id="icon_prefix" type="text" class="validate">
+			          <input id="password" type="password" class="validate">
 			          <label for="icon_prefix">Contraseña</label>
 			        </div>
 			      </div>
