--- a/useras.html
+++ b/useras.html
@@ -18,7 +18,7 @@
   <button class="w3-bar-item w3-button w3-large"
   onclick="w3_close()"> <i class="material-icons white-text">navigate_before</i></button>
   <a href="solicitud.html" class="w3-bar-item w3-button white-text">Solicitudes</a>
-  <a href="#" class="w3-bar-item w3-button white-text">Usuarios</a>
+  <a href="usuarios.html" class="w3-bar-item w3-button white-text">Usuarios</a>
   <a href="index.html" class="w3-bar-item w3-button white-text">Salir</a>
 </div>
 
@@ -68,8 +68,8 @@ Para dudas al respecto marca a la extensión 3220, 65502.</p>
   </div>
     <div class="row"></div>
 
-   <div class="row">
-     <!--  <div class="col s7 push-s5 blue"><span class="flow-text">This div is 7-columns wide on pushed to the right by 5-columns.</span></div> -->
+ <!--   <div class="row">
+  
       <div class=" card-panel blue lighten-4 col s12 ">
         <h6 class="light-blue-text text-darken-4">Búsqueda</h6>
         <br>
@@ -107,10 +107,10 @@ Para dudas al respecto marca a la extensión 3220, 65502.</p>
             </div>
 
        </div>
-      </div>
+      </div> -->
 
       <div class="row">
-        <div class="col s12 red">
+        <div class="col s12 ">
              
         </div>
         
