Ajuste por correcciones, se agregaron modales de usuario y agregar usuarios, así como vista de nav

--- a/login.html
+++ b/login.html
@@ -12,15 +12,15 @@
 <body>
 		<!-- Dropdown Structure -->
 <ul id="dropdown1" class="dropdown-content ">
-  <li><a href="#!" class="grey-text">one</a></li>
-  <li><a href="#!" class="grey-text">two</a></li>
+  <li><a href="#!" class="grey-text">Como llamar</a></li>
+  <li><a href="#!" class="grey-text">Actualizar contacto</a></li>
   <li class="divider"></li>
-  <li><a href="#!" class="grey-text">three</a></li>
+  <li><a href="#!" class="grey-text">Contacto</a></li>
 </ul>
 <nav>
-  <div class="nav-extended white ">
+  <div class="nav-wrapper white ">
  
-    <img src="images/logo_uaq.png">
+    <img src="images/logo_uaq2.png">
     <ul class="right hide-on-med-and-down">
      
       <!-- Dropdown Trigger -->
