--- a/index.html
+++ b/index.html
@@ -18,22 +18,60 @@
 <body>
 	<!-- Dropdown Structure -->
 <ul id="dropdown1" class="dropdown-content ">
-  <li><a href="#!" class="grey-text">one</a></li>
-  <li><a href="#!" class="grey-text">two</a></li>
+  <li><a href="#!" class="grey-text">Como llamar</a></li>
+  <li><a href="#!" class="grey-text">Actualizar Directorio</a></li>
   <li class="divider"></li>
-  <li><a href="#!" class="grey-text">three</a></li>
+  <li><a href="#!" class="grey-text">Contacto</a></li>
 </ul>
-<nav>
-  <div class="nav-extended white ">
+<ul id="dropdown1" class="dropdown-content ">
+  <li><a href="#!" class="grey-text">Como llamar</a></li>
+  <li><a href="#!" class="grey-text">Actualizar Directorio</a></li>
+  <li class="divider"></li>
+  <li><a href="#!" class="grey-text">Contacto</a></li>
+</ul>
+<!--nav>
+  <div class="nav-wrapper white ">
  
-    <img src="images/logo_uaq.png">
+    <img src="images/logo_uaq2.png">
     <ul class="right hide-on-med-and-down">
       <li><a class="light-blue-text text-darken-4" href="login.html"><i class="material-icons">account_circle</i></a></li>
-      <!-- Dropdown Trigger -->
-      <li><a class="dropdown-trigger light-blue-text text-darken-4 " href="#!" data-target="dropdown1"><i class="material-icons right ">apps</i></a></li>
+       Dropdown Trigger -->
+      <!--li><a class="dropdown-trigger light-blue-text text-darken-4 " href="#!" data-target="dropdown1"><i class="material-icons right ">apps</i></a></li>
     </ul>
   </div>
-</nav>
+</nav> -->
+
+ <nav class="nav-extended white">
+    <div class="nav-wrapper" style="height: 90px;">
+       <img src="images/logo_uaq.png">
+      <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
+      <ul id="nav-mobile" class="right hide-on-med-and-down">
+        <li><a class="light-blue-text text-darken-4" href="login.html"><i class="material-icons">account_circle</i></a></li>
+       <!--Dropdown Trigger -->
+      <li><a class="dropdown-trigger light-blue-text text-darken-4 " href="#!" data-target="dropdown1"><i class="material-icons right ">apps</i></a></li>
+      </ul>
+    </div>
+    <div class="nav-content ">
+      <ul class="tabs tabs-transparent ">
+        <li class="tab"><a href="#" class="light-blue-text text-darken-4" >Inicio</a></li>
+        <li class="tab"><a href="#" class="light-blue-text text-darken-4">Rectoría</a></li>
+        <li class="tab"><a href="#" class="light-blue-text text-darken-4">Secretarías</a></li>
+        <li class="tab"><a href="#" class="light-blue-text text-darken-4">Direcciones</a></li>
+        <li class="tab"><a href="#" class="light-blue-text text-darken-4">Coordinaciones</a></li>
+        <li class="tab"><a href="#" class="light-blue-text text-darken-4">Campus</a></li>
+        <li class="tab"><a href="#" class="light-blue-text text-darken-4">Facultades</a></li>
+      </ul>
+    </div>
+  </nav>
+
+  <ul class="sidenav" id="mobile-demo">
+    <li><a href="sass.html">Sass</a></li>
+    <li><a href="badges.html">Components</a></li>
+    <li><a href="collapsible.html">JavaScript</a></li>
+  </ul>
+
+ 
+
       <br>
       <br>  
  <!--Fin nav bar-->
