--- a/solicitud.html
+++ b/solicitud.html
@@ -39,7 +39,7 @@
    <div class="row">
      <!--  <div class="col s7 push-s5 blue"><span class="flow-text">This div is 7-columns wide on pushed to the right by 5-columns.</span></div> -->
       <div class=" card-panel  lighten-4 col s12 ">
-        <h4 class="light-blue-text text-darken-4 center"><b>Listado de Solicitudes</b></h4>
+        <h3 class="light-blue-text text-darken-4 center"><b>Listado de Solicitudes</b></h3>
         <br>
         <br>
       <div class="row">
@@ -67,13 +67,10 @@
               <input id="first_name" type="text" class="validate">
             </div>
             <div class="col s1">
-              <a href="" class="white-text">-</a>
+              <a href="" class="white-text">--</a>
               <a class="waves-effect waves-light blue btn"><i class="material-icons left">search</i></a>
             </div>
-            <div class="col s1 ">
-              <a href="" class="white-text">-</a>
-              <a class="waves-effect waves-light red btn"><i class="material-icons left">close</i></a>
-            </div>
+          
 
        </div><!--Fin sección de búsqueda-->
       </div>
