--- a/login.html
+++ b/login.html
@@ -48,7 +48,7 @@
 			        </div>
 			      </div>
 			      <div class="row">
-			        <div class="input-field col s12 ">
+			        <div class="input-field col s12">
 			          <i class="material-icons prefix">fingerprint</i>
 			          <input id="password" type="password" class="validate">
 			          <label for="icon_prefix">Contraseña</label>
@@ -57,7 +57,7 @@
 			      <div class="row">
 			        <div class="input-field col s12 ">
 			          <i class="material-icons prefix">fingerprint</i>
-			         <a href="useras.html" class="waves-effect waves-light btn">Entrar</a>
+			         <a href="solicitud.html" class="waves-effect waves-light blue btn">Entrar</a>
 			        </div>
 			      </div>
 			    </form>
