--- a/user.html
+++ b/user.html
@@ -38,7 +38,7 @@
 
    <div class="row">
      <!--  <div class="col s7 push-s5 blue"><span class="flow-text">This div is 7-columns wide on pushed to the right by 5-columns.</span></div> -->
-      <div class=" card-panel  lighten-4 col s12 ">
+      <div class=" card-panel  lighten-4 col s8 push-s2">
         <h4 class="light-blue-text text-darken-4 center">ACTUALIZACIÓN DE CONTACTOS DEL DIRECTORIO INSTITUCIONAL</h4>
         <br>
         <br>
@@ -49,13 +49,13 @@
                     </div>      
                     <div class="col s3 ">
                     <!-- Modal Trigger -->
-                    <button data-target="modal1" class="btn modal-trigger waves-effect waves-light green btn"><i class="material-icons left">person_add</i>Crear Contacto</button>
+                    <!-- <button data-target="modal1" class="btn modal-trigger waves-effect waves-light green btn"><i class="material-icons left">person_add</i>Crear Contacto</button> -->
                     </div>
                     <div class="col s3 ">
                        <button data-target="modal2" class="btn modal-trigger waves-effect waves-light light-blue btn"><i class="material-icons left">person</i>Actualizar Contacto</button>
                     </div>
                     <div class="col s3 ">
-                       <button data-target="modal3" class="btn modal-trigger waves-effect waves-light red btn"><i class="material-icons left">person_outline</i>Eliminar Contacto</button>
+                     <!--   <button data-target="modal3" class="btn modal-trigger waves-effect waves-light red btn"><i class="material-icons left">person_outline</i>Eliminar Contacto</button> -->
                     </div>
                 </div>
 
@@ -67,7 +67,7 @@
         <br>
       </div>
 
-        <div class=" card-panel  lighten-4 col s12 ">
+        <div class=" card-panel  lighten-4 col s8 push-s2">
         <h4 class="light-blue-text text-darken-4 center">ACTUALIZACIÓN DE DEPENDENCIAS DEL DIRECTORIO INSTITUCIONAL</h4>
         <br>
         <br>
@@ -77,13 +77,13 @@
                    
                     </div>      
                     <div class="col s3 ">
-                     <button data-target="modal4" class="btn modal-trigger waves-effect waves-light green btn"><i class="material-icons left">person_add</i>Crear Depencia</button>
+                    <!--  <button data-target="modal4" class="btn modal-trigger waves-effect waves-light green btn"><i class="material-icons left">person_add</i>Crear Depencia</button> -->
                     </div>
                     <div class="col s3 ">
                       <button data-target="modal5" class="btn modal-trigger waves-effect waves-light light-blue btn"><i class="material-icons left">person</i>Actualizar Dependencia</button>
                     </div>
                     <div class="col s3 ">
-                       <button data-target="modal6" class="btn modal-trigger waves-effect waves-light red btn"><i class="material-icons left">person_outline</i>Eliminar Dependencia</button>
+                     <!--   <button data-target="modal6" class="btn modal-trigger waves-effect waves-light red btn"><i class="material-icons left">person_outline</i>Eliminar Dependencia</button> -->
                     </div>
                 </div>
 
