--- a/usuarios.html
+++ b/usuarios.html
@@ -140,10 +140,18 @@
               <option value="" disabled selected><i>Seleccione</i></option>
               <option value="1">Administrador</option>
               <option value="2">Asistente</option>
+              <option value="3">Responsable Área</option>
             </select>
             <label>Rol Usuario</label>
           </div>
-       
+          <div class="input-field col s6">
+            <select>
+              <option value="" disabled selected><i>Seleccione</i></option>
+              <option value="1">DITI</option>
+              <option value="2">Recursos Humanos</option>
+            </select>
+            <label>Área</label>
+          </div>
         </form>
       </div>
     </div>
