--- a/solicitud.html
+++ b/solicitud.html
@@ -77,7 +77,7 @@
                 <tr>
                   <td>I.S. Pedro Ramírez</td>
                   <td>5589</td>
-                  <td>Validar</td>
+                  <td>VALIDAR</td>
                   <td>
                      <a class="waves-effect waves-light light-blue btn"><i class="material-icons left">edit</i></a>
                     <a class="waves-effect waves-light green btn"><i class="material-icons left">check</i></a>
@@ -87,7 +87,7 @@
                 <tr>
                   <td>M.C. Alan Hernández</td>
                   <td>6698</td>
-                  <td>Pendiente Correción</td>
+                  <td>CORRECCION</td>
                   <td>
                       <a class="waves-effect waves-light light-blue btn"><i class="material-icons left">edit</i></a>
                     <a class="waves-effect waves-light green btn"><i class="material-icons left">check</i></a>
@@ -97,7 +97,7 @@
                 <tr>
                   <td>Dir. Andrés García</td>
                   <td>7782</td>
-                  <td>Aprobado</td>
+                  <td>APROBADO</td>
                   <td>
                      <a class="waves-effect waves-light light-blue btn"><i class="material-icons left">edit</i></a>
                     <a class="waves-effect waves-light green btn"><i class="material-icons left">check</i></a>
@@ -107,7 +107,7 @@
                  <tr>
                   <td>Dir. Andrés García</td>
                   <td>7782</td>
-                  <td>Rechazado</td>
+                  <td>VALIDAR</td>
                   <td>
                      <a class="waves-effect waves-light light-blue btn"><i class="material-icons left">edit</i></a>
                     <a class="waves-effect waves-light green btn"><i class="material-icons left">check</i></a>
