--- a/solicitud.html
+++ b/solicitud.html
@@ -17,7 +17,9 @@
 <div class="w3-sidebar w3-bar-block w3-card w3-animate-left " style="display:none;background-color: #003366;" id="mySidebar">
   <button class="w3-bar-item w3-button w3-large"
   onclick="w3_close()"> <i class="material-icons white-text">navigate_before</i></button>
-  <a href="usuarios.html" class="w3-bar-item w3-button white-text">Usuarios</a>
+ <a href="usuarios.html" class="w3-bar-item w3-button white-text">Usuarios</a>
+  <a href="user_cont.html" class="w3-bar-item w3-button white-text">Contactos</a>
+  <a href="user_depe.html" class="w3-bar-item w3-button white-text">Dependencias</a>
   <a href="index.html" class="w3-bar-item w3-button white-text">Salir</a>
 </div>
 
