--- a/useras.html
+++ b/useras.html
@@ -18,6 +18,10 @@
   <button class="w3-bar-item w3-button w3-large"
   onclick="w3_close()"> <i class="material-icons white-text">navigate_before</i></button>
   <a href="perfil.html" class="w3-bar-item w3-button white-text">Perfil</a>
+   <a href="usuarios.html" class="w3-bar-item w3-button white-text">Usuarios</a>
+  <a href="solicitud.html" class="w3-bar-item w3-button white-text">Solicitudes</a>
+  <a href="user_cont.html" class="w3-bar-item w3-button white-text">Contactos</a>
+  <a href="user_depe.html" class="w3-bar-item w3-button white-text">Dependencias</a>
   <a href="index.html" class="w3-bar-item w3-button white-text">Salir</a>
 </div>
 
