--- a/usuarios.html
+++ b/usuarios.html
@@ -17,6 +17,10 @@
 <div class="w3-sidebar w3-bar-block w3-card w3-animate-left " style="display:none;background-color: #003366;" id="mySidebar">
   <button class="w3-bar-item w3-button w3-large"
   onclick="w3_close()"> <i class="material-icons white-text">navigate_before</i></button>
+
+  <a href="useras.html" class="w3-bar-item w3-button white-text">Inicio</a>
+  <a href="perfil.html" class="w3-bar-item w3-button white-text">Perfil</a>
+  <a href="usuarios.html" class="w3-bar-item w3-button white-text">Usuarios</a>
   <a href="solicitud.html" class="w3-bar-item w3-button white-text">Solicitudes</a>
   <a href="user_cont.html" class="w3-bar-item w3-button white-text">Contactos</a>
   <a href="user_depe.html" class="w3-bar-item w3-button white-text">Dependencias</a>
