--- a/rectoria.html
+++ b/rectoria.html
@@ -107,15 +107,39 @@
     <div class="col s5 push-s1">
     <div class="card">
        <div class="head grey lighten-2" style="padding-top: 4px;padding-left: 6px; padding-bottom: 8px;">
-        <h6>Información del Contacto</h6>
+        <h6>Información de Contacto</h6>
       </div>
       <div class="card-content">
-        <span class="card-title blue-text text-darken-2">Contacto</span>
+        
         <p>
-          Dra. Margarita Teresa de Jesús García Gasca Rectora <br>
+          <b>Dra. Margarita Teresa de Jesús García Gasca Rectora</b>
+           <br>
           Nivel de puesto: Primer nivel  <br>
           Fecha de alta en el puesto: Enero 2018<br>
-          rectoria@uaq.mx
+          rectoria@uaq.mx<br>
+          Extensión 3103
+        </p><br>
+        <p>
+          <b>C. Yolanda Ma. Guadalupe Romero </b><br>
+          Ríos Módulo de Información<br>
+          Extensión 3100
+        </p><br>
+        <p>
+          <b>C. Juán Trejo Guerrero</b><br>
+          Cronista<br>
+          Extensión 3122
+        </p><br>
+        <p>
+          <b>C. Juana Torres Ortiz</b><br>
+          Asistente de Rectoría<br>
+          rectoria@uaq.mx<br>
+          Extensión 3103
+        </p><br>
+        <p>
+          <b>Lic. José Juan Trejo Vega </b><br>
+          Coordinador Administrativo de Rectoría<br>
+          juan.trejo@uaq.mx <br>
+          Extensión 3165
         </p>
       </div>
     </div>
