--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     <div class="nav-content ">
       <ul class="tabs tabs-transparent ">
         <li class="tab"><a href="#" class="light-blue-text text-darken-4" >Inicio</a></li>
-        <li class="tab"><a href="#" class="light-blue-text text-darken-4">Rectoría</a></li>
+        <li class="tab"><a href="rectoria.html" class="light-blue-text text-darken-4">Rectoría</a></li>
         <li class="tab"><a href="#" class="light-blue-text text-darken-4">Secretarías</a></li>
         <li class="tab"><a href="#" class="light-blue-text text-darken-4">Direcciones</a></li>
         <li class="tab"><a href="#" class="light-blue-text text-darken-4">Coordinaciones</a></li>
@@ -152,8 +152,7 @@
       </div>
       <div class="card-content">
         <span class="card-title blue-text text-darken-2">Cómo llamar a la UAQ</span>
-        <p >Marca al teléfono (442) 192-12-00, escucha el mensaje de bienvenida del conmutador y marca la extensión del contacto deseado.    
-        <br>                        
+        <p >Marca al teléfono (442) 192-12-00, escucha el mensaje de bienvenida del conmutador y marca la extensión del contacto deseado.                            
         </p>
       </div>
     </div>
