--- a/solicitud.html
+++ b/solicitud.html
@@ -18,7 +18,7 @@
   <button class="w3-bar-item w3-button w3-large"
   onclick="w3_close()"> <i class="material-icons white-text">navigate_before</i></button>
   <a href="useras.html" class="w3-bar-item w3-button white-text">Inicio</a>
-  <a href="perfil.html" class="w3-bar-item w3-button white-text">Usuarios</a>
+  <a href="perfil.html" class="w3-bar-item w3-button white-text">Perfil</a>
  <a href="usuarios.html" class="w3-bar-item w3-button white-text">Usuarios</a>
   <a href="user_cont.html" class="w3-bar-item w3-button white-text">Contactos</a>
   <a href="user_depe.html" class="w3-bar-item w3-button white-text">Dependencias</a>
