--- a/rectoria.html
+++ b/rectoria.html
@@ -47,7 +47,7 @@
     </div>
     <div class="nav-content ">
       <ul class="tabs tabs-transparent ">
-        <li class="tab"><a href="#" class="light-blue-text text-darken-4" >Inicio</a></li>
+        <li class="tab"><a href="index.html" class="light-blue-text text-darken-4" >Inicio</a></li>
         <li class="tab"><a href="#" class="light-blue-text text-darken-4">Rectoría</a></li>
         <li class="tab"><a href="#" class="light-blue-text text-darken-4">Secretarías</a></li>
         <li class="tab"><a href="#" class="light-blue-text text-darken-4">Direcciones</a></li>
